--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
+    "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
