--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
